--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,14 @@
     <artifactId>bowlingkata</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId/>
+            <artefactId>junit</artefactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
