first passing test

--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,7 @@
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
-            <artifactId/>
-            <artefactId>junit</artefactId>
+            <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
